# tomatinho

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.test.txt  setup.py
data/: com.github.meunomemauricio.tomatinho.gschema.xml
po/: POTFILES.in  fr.po  it.po  pt.po
scripts/: tomatinho
src/: tomatinho.py
src/tomatinho/: about_dialog.py  appinfo.py  event_recorder.py  locale.py  settings.py  state_timer.py  states.py  tomatinho.py
test/: test_event_recorder.py  test_state_timer.py
tomatinho/: __init__.py  about_dialog.py  appinfo.py  event_recorder.py  i18n.py  locale.py  state_timer.py  states.py  tomatinho.py
