[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="tomatinho"
version="0.2"
description="GTK Pomodoro Timer application"
authors=[{name="Mauricio Freitas"}]
readme="README.md"
license={text = "MIT"}
requires-python=">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: GTK",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Topic :: Utilities",
]
dependencies=["PyGObject==3.42.2"]

[project.scripts]
tomatinho="tomatinho.tomatinho:main"

[project.urls]
homepage = "https://github.com/meunomemauricio/tomatinho"

[tool.setuptools]
packages=["tomatinho"]

[tool.black]
line-length = 79
